Updated German by Daisuke (ZeRO)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6269 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-de.xml
+++ b/Languages/default-de.xml
@@ -13,10 +13,10 @@
 <!-- Manifest -->
 <manifest	name="Deutsch"
 		author="Jann Röder"
-		updatedBy="ZeRO, Frontier, Jann Röder"
+		updatedBy="Frontier, Jann Röder, ZeRO (Daisuke)"
 		description="Shareaza Default German Skin File"
 		link="http://shareaza.sourceforge.net/"
-		email="zero9999@gmail.com"
+		email="zero9999(at)gmail(dot)com"
 		version="2.3.0.0"
 		type="Language"
 		language="de"
