Updated Czech (Odin); switched some languages to UTF-8
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6282 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-fi.xml
+++ b/Languages/default-fi.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Shareaza Default Finnish Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
 
