--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Shareaza Default Afrikaans Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx --> <!-- Weergawe: 27 Oktober 2005 vir Shareaza 2.2.0.2 -->
 
