--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Shareaza Default Catalan Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
 
