--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -17,7 +17,7 @@
 		description="Shareaza Default English Skin File"
 		link="http://shareaza.sourceforge.net/"
 		email="contact(at)shareaza(dot)com"
-		version="2.3.0.0"
+		version="2.3.0.1"
 		type="Language"
 		language="en"
 		prompt="Click here to select English as your natural language."
@@ -2863,6 +2863,7 @@
 	<string id="16410" value="A subfolder of the selected folder &quot;%s&quot; is already part of your library.\nAdding this folder will cause re-hashing of some files.\n\nDo you want to continue ?"/>
 	<string id="16411" value="Unable to move the file %s. The file may be in use by another application.\n\nDo you wish to try to copy this file instead?"/>
 	<string id="16412" value="Ghost File"/>
+	<string id="16413" value="New Group"/>
 	<string id="16448" value="Connected to %s, handshaking..."/>
 	<string id="16449" value="Now chatting with %s (%s)."/>
 	<string id="16450" value="Connection to %s closed."/>
@@ -3119,6 +3120,7 @@
 	<string id="20010" value="&amp;Back"/>
 	<string id="20011" value="&amp;Next"/>
 	<string id="20012" value="Finish"/>
+	<string id="20013" value="All"/>
 	<string id="20100" value="Connecting"/>
 	<string id="20101" value="Requesting"/>
 	<string id="20102" value="Response"/>
