--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -16,8 +16,8 @@
 		updatedBy="ceceboy, Neglacio"
 		description="Shareaza Default Dutch Skin File"
 		link="http://shareaza.sourceforge.net/"
-		email=""
-		version="2.3.0.0"
+		email="Neglacio@live.nl"
+		version="2.3.0.1"
 		type="Language"
 		language="nl"
 		prompt="Klik hier om Nederlands als taal te kiezen."
@@ -2859,6 +2859,7 @@
 	<string id="16410" value="De complete en incomplete mappen mogen niet dezelfde zijn"/>
 	<string id="16411" value="Niet in staat om bestand %s te verplaatsen. Het bestand is mogelijk in gebruik door een andere toepassing.\n\nWil je proberen om het bestand te kopiëren in plaats van te verplaatsen?"/>
 	<string id="16412" value="Spookbestand"/>
+	<string id="16413" value="Nieuwe groep"/>
 	<string id="16448" value="Verbonden met %s, bezig met handschudden..."/>
 	<string id="16449" value="Nu aan het chatten met %s (%s)."/>
 	<string id="16450" value="Verbinding met %s is afgebroken."/>
@@ -3115,6 +3116,7 @@
 	<string id="20010" value="&amp;Terug"/>
 	<string id="20011" value="&amp;Volgende"/>
 	<string id="20012" value="Beëindig"/>
+	<string id="20013" value="Alles"/>
 	<string id="20100" value="Verbindt..."/>
 	<string id="20101" value="Toelating vragen..."/>
 	<string id="20102" value="Antwoordt..."/>
